@@ -119,6 +119,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - SAS                    Galen Johnson
 - SDLBasic               Roberto Rossi
 - Scheme                 Jon Raphaelson
+- SciLab                 Christophe David
 - Smalltalk              Bananeweizen
 - Smarty                 Alan Juden
 - T-SQL                  Duncan Lock
