@@ -13,6 +13,8 @@ Please send any bug reports to BenBE@omorphia.de, or use the bug report tracker
 at sourceforge (http://sourceforge.net/tracker/?group_id=114997&atid=670231)
 
 Version 1.0.8.1
+  -  Added language files
+     * SciLab (Christophe David)
   -  Added support for Escape Regular Expressions (BenBE)
      * Implemented C-style Escapes in PHP (BenBE)
      * Introduced support for \xAB and \007 style Char Escapes in PHP (BenBE)
